Fix vertical-align tbar tops

--- a/app/css/stylesheet_tbar.css
+++ b/app/css/stylesheet_tbar.css
@@ -3,8 +3,8 @@ tbar {
     margin: 10px;
     height: 290px;
     width: 280px;
-    /*float: left;*/
     display: inline-block;
+    vertical-align: top;
     padding: 0;
     border-radius: 3px;
     z-index: 0;
